--- a/turismo_app/pubspec.yaml
+++ b/turismo_app/pubspec.yaml
@@ -12,7 +12,13 @@ dependencies:
   http: ^1.2.1
   path: ^1.9.0
   sqflite: ^2.3.3+1
+  flutter_launcher_icons: "^0.13.1"
 
+flutter_launcher_icons:
+  image_path: "assets/images/ic_launcher.png"
+  android: true
+  ios: true
+  min_sdk_android: 21
 dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
